Bug 820279 - [Captive Portal] Notification for available WiFi network which uses a captive portal

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -201,6 +201,9 @@
     <link rel="stylesheet" type="text/css" href="style/crash_reporter/crash_reporter.css">
     <script defer src="js/crash_reporter.js"></script>
 
+    <!-- Captive Portal Login -->
+    <script defer src="js/captive_portal.js"></script>
+
     <!-- Windows -->
     <!-- Any module that wants to intercept the Home button and prevent the -->
     <!-- homescreen from being displayed must come before this script. -->
